:bug: I translated Spanish to English

--- a/1. making_request.ipynb
+++ b/1. making_request.ipynb
@@ -5,7 +5,7 @@
    "id": "8185e19d",
    "metadata": {},
    "source": [
-    "# Explicacion del Código"
+    "# Explanation of the Code"
    ]
   },
   {
@@ -13,7 +13,7 @@
    "id": "ce597d8a",
    "metadata": {},
    "source": [
-    "- Actualizacion del gestor de paquetes ***PIP***"
+    "- Updating the ***PIP*** package manager"
    ]
   },
   {
@@ -31,7 +31,7 @@
    "id": "049f175f",
    "metadata": {},
    "source": [
-    "- Instalación de dependecias "
+    "- Installation of dependencies"
    ]
   },
   {
@@ -49,7 +49,7 @@
    "id": "f862d087",
    "metadata": {},
    "source": [
-    "- Configuracion para usar las variables de entorno"
+    "- Configuration to use environment variables"
    ]
   },
   {
@@ -70,7 +70,7 @@
    "id": "4bffecfc",
    "metadata": {},
    "source": [
-    "- Validacion para saber si estamos leyendo las variables de entorno"
+    "- Validation to check if we are reading the environment variables"
    ]
   },
   {
@@ -89,7 +89,7 @@
    "id": "cc24b09f",
    "metadata": {},
    "source": [
-    "- Importamos la libreria de Anthropic"
+    "- We import the Anthropic library"
    ]
   },
   {
@@ -107,8 +107,8 @@
    "id": "24601306",
    "metadata": {},
    "source": [
-    "- Creamos una instacia de la libreria de Anthropic\n",
-    "- Configuramos todo lo necesario para poder interactuar con la API de Anthropic"
+    "- We create an instance of the Anthropic library\n",
+    "- We configure everything necessary to interact with the Anthropic API"
    ]
   },
   {
@@ -133,7 +133,7 @@
    "id": "9c104a76",
    "metadata": {},
    "source": [
-    "- Enviamos el mensaje a la API y obtenemos la respuestesta"
+    "- We send the message to the API and get the response"
    ]
   },
   {
@@ -155,7 +155,7 @@
    "id": "9ee2a66b",
    "metadata": {},
    "source": [
-    "- Obtenemos el mensaje y lo mostramos por pantalla"
+    "- We get the message and display it on the screen"
    ]
   },
   {
