:globe_with_meridians: translate messages and text to English

--- a/2. multi_turn.ipynb
+++ b/2. multi_turn.ipynb
@@ -151,7 +151,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "add_user_message(messages, \"Hola, me llamo Andywclav, un gusto conocerte\")"
+    "add_user_message(messages, \"Hi, my name is Andywclav, Nice to meet you!\")"
    ]
   },
   {
@@ -207,7 +207,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "add_user_message(messages, \"En nada, estoy probando tu API Claude\")"
+    "add_user_message(messages, \"No problem, I'm just testing your Claude API\")"
    ]
   },
   {
